# neuropredict

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app_artifacts/: atlas_mapping.json  cc200_centroids.npy  dataset_meta.json  example_connectivity.npy  examples.json  linear_model.joblib
results/: baseline_metrics.json  baseline_metrics_abide.json  gnn_metrics_full100.json  gnn_top_edges_gnnexp_abide.json  shap_top_features_abide.json  shap_top_features_abide_annotated.json
scripts/: annotate_shap.py  build_app_artifacts.py  compare_explainability.py  extract_centroids.py  inspect_data.py  run_explain.py  run_gnn_explain.py  train_baseline.py  train_gnn.py
src/: streamlit_app.py
src/neuropredict/: __init__.py  atlas.py  data.py  explain.py  features.py  gnn.py  gnn_explain.py  models.py
src/neuropredict/datasets/: __init__.py  abide.py  adhd200_dev.py  adhd200_full.py  base.py
tests/: test_data.py  test_gnn.py
